<resources>
    <string name="app_name">shekou</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="log">EAM-工程与采购管理系统</string>
    <string name="please_userid">请输入用户名</string>
    <string name="please_password">请输入密码</string>
    <string name="remenber_pass">记住密码</string>
    <string name="login">登录</string>
    <string name="login_loging">登录中...</string>

    <!-- 记住密码 -->
    <string name="logined_member_username">logined_member_username</string>
    <string name="logined_member_password">logined_member_password</string>
    <string name="logined_member_ischeck">logined_member_ischeck</string>
    <string name="login_error_empty_user">用户名不能为空</string>
    <string name="login_error_empty_passwd">密码不能为空</string>
</resources>
