<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/log"
            android:textColor="@color/black"
            android:textSize="24sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="60dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:background="@color/white"
        android:orientation="vertical">
        <EditText
            android:id="@+id/user_login_id"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:singleLine="true"
            android:background="@null"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:hint="@string/please_userid"
            android:textCursorDrawable="@null"
            android:textColorHint="@android:color/darker_gray"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>
        <EditText
            android:id="@+id/user_login_password"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:singleLine="true"
            android:background="@null"
            android:textSize="18sp"
            android:hint="@string/please_password"
            android:textColor="@android:color/black"
            android:inputType="textPassword"
            android:textCursorDrawable="@null"
            android:textColorHint="@android:color/darker_gray"/>


    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/isremenber_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox"
                android:text="@string/remenber_pass"
                android:textSize="14sp"
                android:textColor="@color/white"/>
        </LinearLayout>
        <Button
            android:id="@+id/user_login"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/button_selector"
            android:layout_marginTop="30dp"
            android:text="@string/login"
            android:textSize="18sp"
            android:textColor="@color/white"/>
    </LinearLayout>
    </LinearLayout>
</LinearLayout>
